[package]
name = "rust-digital-garden-cli"
version = "0.1.0"
authors = ["tiberiualex <tiberiu.alexander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.5.11"
directories = "3.0.1"
edit = "0.1.3"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.2"
